--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-intersection-observer": "^8.28.3",
-    "react-postprocessing": "^1.3.1",
+    "react-postprocessing": "^1.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
-    "react-three-fiber": "^5.0.0",
+    "react-three-fiber": "5.0.1",
     "react-three-gui": "^0.3.1",
     "styled-components": "^5.1.1",
     "three": "^0.120.0",
