--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/styled-components": "^5.1.4",
     "drei": "^1.5.3",
     "jotai": "^0.7.3",
     "polished": "^3.6.5",
@@ -24,7 +25,7 @@
     "react-spring": "^8.0.27",
     "react-three-fiber": "5.0.1",
     "react-three-gui": "^0.3.1",
-    "styled-components": "^5.1.1",
+    "styled-components": "^5.2.0",
     "three": "^0.120.0",
     "typescript": "^4.0.3"
   },
