Optimizations and audio!!

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/lodash.clamp": "^4.0.6",
     "@types/styled-components": "^5.1.4",
     "drei": "^1.5.3",
     "jotai": "^0.7.3",
+    "lodash.clamp": "^4.0.3",
     "polished": "^3.6.5",
     "postprocessing": "^6.17.3",
     "prettier": "^2.1.1",
