--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
-    "@headstorm/foundry-react-ui": "1.0.0",
+    "@headstorm/foundry-react-ui": "^1.0.2",
     "@mdi/js": "^5.7.55",
     "@mdi/react": "^1.4.0",
     "@react-three/cannon": "^0.5.3",
@@ -29,7 +29,8 @@
     "react-three-gui": "^0.3.1",
     "styled-components": "^5.2.0",
     "three": "^0.120.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "use-interval": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
